Fix. Broken layout on recommendations.

--- a/wiki/src/install/inc/stylesheets/steps.css
+++ b/wiki/src/install/inc/stylesheets/steps.css
@@ -119,14 +119,24 @@ h2 {
   line-height: 2em;
 }
 
-#recommendations h3, #recommendations p:first-child, #recommendations p:last-child {
+#recommendations  {
+  padding-left: 10px;
+
+}
+
+#recommendations h3, #recommendations p {
   text-align: center;
+}
+
+#recommendations h3 {
+  margin-top: 30px;
 }
 
 #recommendations .row p {
   background: #56347C;
   color: white;
   padding: 10px;
+  text-align: left;
 }
 
 #pagebody #content #recommendations .row p a {
@@ -137,8 +147,15 @@ h2 {
 
 #recommendations img {
   float: left;
-  margin: 10px;
+  width: 150px;
+  height: auto;
 }
+
+#recommendations .state-image img {
+  float: none;
+}
+
+
 
 div.toggleable .hide {
   display: block !important;
